# 2025-project-DiffModels

./: .gitignore  README.md  accelerate_config.yaml  baseline_demo.ipynb  linkreview.md  main.py  pyproject.toml  requirements.txt
code/: description.md
code/ip_adapter_baseline/: old_tutorial_train_plus.py  script.py  script.sh
code/ip_adapter_selfattention/: train_ip_adapter_selfattention.py  train_script.sh
code/ip_adapter_selfattention/ip_adapter/: ip_adapter.py
code/ip_adapter_vae/: train_vae.py  vae_preprocess.py
code/ip_adapter_vae/ip_adapter/: ip_adapter.py
data/: check_count_imgs.py  check_number_faces.py  generate_metadata.py  generate_metadata_gpuVersion.py  readme_data_processing.md
data_preprocess/: check_count_imgs.py  check_number_faces.py  check_watermarks.py  collect_jsons.ipynb  deleteafter.py  generate_metadata_gpuVersion.py
docs/: Kazachkov2025FullLengthGen.tex  references.bib
model_train/: train.sh
parser/: description_parser.md  main_parser.py  main_parser_random.py  parser.py  parsing_helper.py  parsing_helper_random.py  rename.py
