[project]
name = "2025-project-diffmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "beautifulsoup4>=4.13.3",
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas==2.2.2",
    "pillow>=11.1.0",
    "qwen-vl-utils>=0.0.10",
    "requests>=2.32.3",
    "scikit-learn==1.5.0",
    "timm>=0.6.12",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
    "ultralytics>=8.3.23",
]
